<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage"
    android:background="#EEE8EF"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40dp"
        android:textColor="@color/black"
        android:layout_centerInParent="true"
        android:layout_above="@+id/linearPage1"
        android:layout_margin="10dp"
        android:padding="10dp"

        />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearPage1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/email_user"
            android:textColor="@color/black"
            android:textSize="10dp"

            />

        <EditText
            android:id="@+id/userInput1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_or_email"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/black"


            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/passwordInput1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="numberPassword"
            android:backgroundTint="@android:color/holo_green_light"



            />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearPage1"
        android:layout_centerInParent="true"
        android:onClick="Register"
        android:text="@string/register_for_new_account"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <Button
        android:id="@+id/login_bto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25dp"
        android:layout_below="@+id/register"
        android:layout_centerInParent="true"
        android:padding="10dp"

        />




</RelativeLayout>